# wabbaauto

./: .gitignore  LICENSE  README.md  bun.lockb  package.json
.github/workflows/: tauri-action.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cli/: Cargo.toml  README.md
src-tauri/cli/src/: main.rs
src-tauri/lib-wabbaauto/: Cargo.toml  readme.md
src-tauri/lib-wabbaauto/src/: download_manager.rs  lib.rs  schema.rs  state.rs
src-tauri/lib-wabbaauto/src/downloader/: downloader.rs  error.rs  mod.rs
src-tauri/lib-wabbaauto/src/downloader/headless/: headless.rs  js_injection.rs  mod.rs
src-tauri/lib-wabbaauto/src/downloader/modlink_getter/: mod.rs  modlink_getter.rs  nexus_link_getter.rs
src-tauri/lib-wabbaauto/src/downloader/util/: download.rs  hash.rs  mod.rs
src-tauri/src/: lib.rs  schema.rs
src/lib/: requests.ts  schema.ts  stores.ts
src/lib/components/: MainAlert.svelte  MainButtons.svelte  MainStatus.svelte  MainTable.svelte
src/routes/: +page.svelte
src/routes/download/: +page.svelte  Table.svelte  formatter.ts
src/routes/downloadPick/: +page.svelte
