[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
lib-wabbaauto = { path = "../lib-wabbaauto" }
ringbuffer = "0.15.0"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.92"
serde_json = "1.0.132"
serde = "1.0.214"
ratatui = "0.29.0"
crossterm = "0.28.1"
strum = { version = "0.26.3", features = ["derive"] }
log = "0.4.22"
simplelog = "0.12.2"
once_cell = "1.20.2"
